Fixed overflow, divs can't be 100vh

--- a/app/assets/stylesheets/chat_client.scss
+++ b/app/assets/stylesheets/chat_client.scss
@@ -9,8 +9,8 @@
   flex-grow: 1;
   position: relative;
   font-family: "Lato";
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   background-color: aqua;
   display: grid;
   grid-template-areas: 
@@ -24,7 +24,7 @@
   z-index: 10;
   width: 4px;
   top:0;
-  height: 100vh;
+  height: 100%;
   padding: 0 2px;
   background-clip: content-box;
 }
