--- a/app/assets/stylesheets/workspace_setup.scss
+++ b/app/assets/stylesheets/workspace_setup.scss
@@ -36,7 +36,7 @@
   z-index: 10;
   width: 4px;
   top:0;
-  height: 100vh;
+  height: 100%;
   padding: 0 2px;
   background-clip: content-box;
 }
